informational menu wip

--- a/todo
+++ b/todo
@@ -1,3 +1,5 @@
 index.html > change favicon
 index.html > change description
 informationalMenu > remove commentary
+How to update the json automatically > Api with ChatGPT, scrap the wifi for the json. "How I use GPT scrapper to let chatgpt access the internet"
+Desinstall VS and .NET 
